# spam-classifier-app

./: app.py  pyproject.toml  render.yaml  requirements.txt  setup.py
spam_classifier_model/: config.json  model.safetensors
