[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-classifier"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "Flask==2.3.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "nltk==3.8.1"
]

[tool.setuptools]
python-requires = ">=3.10,<3.11" 